--- a/hometaskmanager-backend/src/main/resources/application.properties
+++ b/hometaskmanager-backend/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+spring.datasource.url=jdbc:mariadb://localhost:3306/home_task_manager
+spring.datasource.username=root
+spring.datasource.password=Acer-AoC-Logitech
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
+spring.flyway.out-of-order=true
