--- a/hometaskmanager-backend/pom.xml
+++ b/hometaskmanager-backend/pom.xml
@@ -15,48 +15,65 @@
 	<name>hometaskmanager</name>
 	<description>Home Task Manager</description>
 	<properties>
-		<java.version>17</java.version>
+		<java.version>21</java.version>
+<!--		<spring-security.version>5.3.4.RELEASE</spring-security.version>-->
+<!--		<spring.version>5.2.8.RELEASE</spring.version>-->
+		<spring-boot.version>3.1.2</spring-boot.version>
 	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-amqp</artifactId>
+			<version>${spring-boot.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
+			<version>${spring-boot.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-jersey</artifactId>
+			<version>${spring-boot.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-mail</artifactId>
+			<version>${spring-boot.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-quartz</artifactId>
+			<version>${spring-boot.version}</version>
 		</dependency>
 		<!-- -->
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-security</artifactId>
-		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>org.springframework.boot</groupId>-->
+<!--			<artifactId>spring-boot-starter-security</artifactId>-->
+<!--			<version>${spring-boot.version}</version>-->
+<!--		</dependency>-->
+<!--		<dependency>-->
+<!--			<groupId>org.springframework.security</groupId>-->
+<!--			<artifactId>spring-security-test</artifactId>-->
+<!--			<scope>test</scope>-->
+<!--		</dependency>-->
 		<!-- -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+			<version>${spring-boot.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
+			<version>${spring-boot.version}</version>
 			<scope>runtime</scope>
 			<optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-tomcat</artifactId>
+			<version>${spring-boot.version}</version>
 			<scope>provided</scope>
 		</dependency>
 
@@ -64,16 +81,12 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
+			<version>${spring-boot.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.amqp</groupId>
 			<artifactId>spring-rabbit-test</artifactId>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.security</groupId>
-			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -93,10 +106,10 @@
 			</exclusions>
 		</dependency>
 		<!--  -->
-
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
+			<version>1.18.32</version>
 			<optional>true</optional>
 		</dependency>
 		<dependency>
@@ -107,10 +120,12 @@
 		<dependency>
 			<groupId>org.flywaydb</groupId>
 			<artifactId>flyway-core</artifactId>
+			<version>9.16.3</version>
 		</dependency>
 		<dependency>
 			<groupId>org.flywaydb</groupId>
 			<artifactId>flyway-mysql</artifactId>
+			<version>9.16.3</version>
 		</dependency>
 
 		<!-- entity-model-mapping -->
@@ -131,7 +146,6 @@
 			<artifactId>swagger-annotations</artifactId>
 			<version>2.2.19</version>
 		</dependency>
-
 
 	</dependencies>
 
@@ -168,27 +182,35 @@
 				</configuration>
 			</plugin>
 			<plugin>
-				<groupId>io.openapitools.swagger</groupId>
-				<artifactId>swagger-maven-plugin</artifactId>
-				<version>2.1.6</version>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.13.0</version>
 				<configuration>
-					<resourcePackages>
-						<resourcePackage>io.openapitools.swagger.example</resourcePackage>
-						<resourcePackage>io.openapitools.swagger.example.alternate</resourcePackage>
-					</resourcePackages>
-					<outputDirectory>${basedir}/target/</outputDirectory>
-					<outputFilename>swagger</outputFilename>
-					<outputFormats>JSON,YAML</outputFormats>
-					<prettyPrint>true</prettyPrint>
+					<source>21</source>
+					<target>21</target>
 				</configuration>
-				<executions>
-					<execution>
-						<goals>
-							<goal>generate</goal>
-						</goals>
-					</execution>
-				</executions>
 			</plugin>
+<!--			<plugin>-->
+<!--				<groupId>io.openapitools.swagger</groupId>-->
+<!--				<artifactId>swagger-maven-plugin</artifactId>-->
+<!--				<version>2.1.6</version>-->
+<!--				<configuration>-->
+<!--					<resourcePackages>-->
+<!--						<resourcePackage>io.openapitools.swagger.example</resourcePackage>-->
+<!--						<resourcePackage>io.openapitools.swagger.example.alternate</resourcePackage>-->
+<!--					</resourcePackages>-->
+<!--					<outputDirectory>${basedir}/target/</outputDirectory>-->
+<!--					<outputFilename>swagger</outputFilename>-->
+<!--					<outputFormats>JSON,YAML</outputFormats>-->
+<!--					<prettyPrint>true</prettyPrint>-->
+<!--				</configuration>-->
+<!--				<executions>-->
+<!--					<execution>-->
+<!--						<goals>-->
+<!--							<goal>generate</goal>-->
+<!--						</goals>-->
+<!--					</execution>-->
+<!--				</executions>-->
+<!--			</plugin>-->
 		</plugins>
 	</build>
 
